style: add z-index to toast to avoid elements overlapping it

--- a/Components/Toast/toast.css
+++ b/Components/Toast/toast.css
@@ -9,6 +9,7 @@
 	flex-wrap: wrap;
 	padding: 1.2rem 1.6rem;
 	position: fixed;
+	z-index: 1;
 }
 
 .toast-btn-container > button {
